--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,14 @@
 <html>
 	<head>
 		{% block title %}{% endblock %}
+		 <title>clown</title>
+        {% endblock %}
+        {% block css %}
+        <style>
+            th {background-color: lightblue;}
+            tr {background-color: lightpink;}
+        </style>
+        {% endblock %}
 	</head>
 	<body>
 		{% block content %} {% endblock %}
