--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		{% block title %}{% endblock %}
+		{% block title %}
 		 <title>clown</title>
         {% endblock %}
         {% block css %}
